--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dotenv": "^8.2.0",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.20",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5",
     "xlsx": "^0.17.0"
   }
 }
