--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "csv-parser": "^3.0.0",
     "date-fns": "^2.25.0",
     "dotenv": "^8.2.0",
+    "form-data": "^4.0.0",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.20",
     "winston": "^3.3.3",
