--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "form-data": "^4.0.0",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.20",
+    "node-schedule": "^2.1.0",
     "string-similarity": "^4.0.4",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5",
